Bug 750636 - [Composer] Wrapped line should not start with a space

Closes https://bugzilla.gnome.org/show_bug.cgi?id=750636